.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b5 - Unreleased
------------------
- Switching the default modal window effect to be a white-out instead of a 
  darkened effect. With large windows, the darkening is very distracting, and
  it also reminds people of the UAC prompts from Windows Vista/7, which is not
  a good thing. ;)
  [limi]

- Removing action links from Events, since they are in the template (and were
  never supposed to have actions in the first place). This fixes
  http://dev.plone.org/plone/ticket/10540.
  [limi]

- Better icon for the theme control panel. (Thanks, Tango!)
  [limi]

- Re add the non-sprite icons to the File and Image FTIs. (These are used only
  for the add menu. File and image instances get icons based on the mimetype.)
  [davisagli]

- Added normalizeString to the Plone view interface, where the declaration was
  missing.
  [davisagli]

- Add a contenttype class to the items listed in select_default_page.cpt, so
  they can get sprited icons. Fixes http://dev.plone.org/plone/ticket/10577.
  [davisagli]

- Add a contenttype class to the links in the livesearch results, so that
  they can get sprited icons. Fixes http://dev.plone.org/plone/ticket/10512.
  [davisagli]

- Avoid using the deprecated five:implements directive.
  [hannosch]

- Avoid testing dependency on zope.app.testing.
  [hannosch]

- No longer use the extra argument to the functional tests publish method.
  [hannosch]

- Make the jQueryTools overlay configuration options in popupforms.js be
  the default overlay configuration for jQueryTools so that popup forms in
  other add ons look similar.
  [smcmahon]

4.0b4 - 2010-06-03
------------------

- Fix FactoryTool to mangle REQUEST.BASEn correctly.
  [elro]

- Updated the description_user_management default message in