@@ -24,7 +24,7 @@
                                  view_macros view_template/macros | nothing;
                                  view_macro view_macros/content-core | nothing;
                                  showDiscussable python:object_title or object_description or view_macro;">
-             <div class="comment" 
+             <!-- <div class="comment" 
                   tal:condition="showDiscussable"
                   tal:define="here python:discussable;
                               context python:discussable">
@@ -35,7 +35,7 @@
                  <tal:block tal:condition="view_macro">
                      <div metal:use-macro="view_macro"/>
                  </tal:block>
-             </div>
+             </div> -->
         </tal:discussable>
 
         <tal:thread tal:repeat="reply replies">
@@ -74,112 +74,108 @@
               tal:attributes="action string:${context/@@plone_context_state/object_url}/${template/getId}"
               tal:define="isAnon context/@@plone_portal_state/anonymous;">
 
-            <fieldset>
+            <input type="hidden" name="Creator" value=""
+                   tal:define="member context/@@plone_portal_state/member;"
+                   tal:attributes="value member/getUserName" />
 
-                <legend i18n:translate="legend_add_comment">Add comment</legend>
-                <p i18n:translate="description_add_comment">
-                    You can add a comment by filling out the form below. Plain text
-                    formatting.
-                </p>
+            <div tal:condition="isAnon">
+                <dl class="portalMessage warning">
+                    <dt i18n:translate="">
+                        Info
+                    </dt>
+                    <dd i18n:translate="legend_note_reply_anonymous">
+                        You are not logged in. You may optionally enter your
+                        username and password below. If you don't enter anything,
+                        this comment will be posted as 'Anonymous User'.
+                    </dd>
+                </dl>
 
-                <input type="hidden" name="Creator" value=""
-                       tal:define="member context/@@plone_portal_state/member;"
-                       tal:attributes="value member/getUserName" />
+                <div class="field">
 
-                <div tal:condition="isAnon">
-                    <dl class="portalMessage warning">
-                        <dt i18n:translate="">
-                            Info
-                        </dt>
-                        <dd i18n:translate="legend_note_reply_anonymous">
-                            You are not logged in. You may optionally enter your
-                            username and password below. If you don't enter anything,
-                            this comment will be posted as 'Anonymous User'.
-                        </dd>
-                    </dl>
+                    <label for="username" i18n:translate="label_name">Name</label>
 
-                    <div class="field">
-
-                        <label for="username" i18n:translate="label_name">Name</label>
-
-                        <input name="username"
-                               id="username"
-                               value="" alt="Username" title="Name"
-                               size="40"
-                               i18n:attributes="title label_name; alt label_username;" />
-
-                    </div>
-
-                    <div class="field">
-
-                        <label for="password" i18n:translate="label_password">Password</label>
-
-                        <input type="password"
-                               id="password"
-                               name="password"
-                               value="" alt="Password" title="Password"
-                               size="40"
-                               i18n:attributes="title label_password; alt label_password;" />
-
-                    </div>
-
-                </div>
-
-
-            <div class="field"
-            tal:define="error errors/subject|nothing;"
-            tal:attributes="class python:test(error, 'field error', 'field')">
-
-                    <label for="subject" i18n:translate="label_subject">Subject</label>
-
-            <span class="fieldRequired" title="Required"
-                  i18n:attributes="title title_required;"
-                  i18n:translate="label_required">(Required)</span>
-
-                <div tal:content="error">Validation error output</div>
-
-                    <input name="subject"
-                           id="subject"
-                           value=""
+                    <input name="username"
+                           id="username"
+                           value="" alt="Username" title="Name"
                            size="40"
-                           tal:attributes="value request/subject|request/title_override|nothing;" />
+                           i18n:attributes="title label_name; alt label_username;" />
 
                 </div>
 
-            <div class="field"
-            tal:define="error errors/body_text|nothing;"
-            tal:attributes="class python:test(error, 'field error', 'field')">
+                <div class="field">
 
-              <label for="body_text" i18n:translate="label_comment">Comment</label>
+                    <label for="password" i18n:translate="label_password">Password</label>
 
-            <span class="fieldRequired" title="Required"
-                  i18n:attributes="title title_required;"
-                  i18n:translate="label_required">(Required)</span>
-
-                <div tal:content="error">Validation error output</div>
-
-                    <textarea name="body_text"
-                              id="body_text"
-                              cols="40"
-                              rows="8"
-                              tal:content="request/body_text|request/text_override | nothing"
-                            ></textarea>
+                    <input type="password"
+                           id="password"
+                           name="password"
+                           value="" alt="Password" title="Password"
+                           size="40"
+                           i18n:attributes="title label_password; alt label_password;" />
 
                 </div>
 
-                <div class="formControls">
+            </div>
 
-                    <input class="context"
-                           type="submit"
-                           value="Save"
-                           name="form.button.Save"
-                           i18n:attributes="value label_save;"
-                           tal:attributes="name string:discussion_reply:method;" />
 
-                </div>
-              <input type="hidden" name="form.submitted" value="1" />
+     <div class="field"
+        tal:define="error errors/subject|nothing;"
+        tal:attributes="class python:test(error, 'field error', 'field')">
 
-            </fieldset>
+<!--
+             <label for="subject" i18n:translate="label_subject">Subject</label>
+
+        <span class="fieldRequired" title="Required"
+              i18n:attributes="title title_required;"
+              i18n:translate="label_required">(Required)</span>
+
+            <div tal:content="error">Validation error output</div>
+ -->
+                <input name="subject"
+                       id="subject"
+                       value=""
+                       size="40"
+                       type="hidden"
+                       tal:attributes="value context/Title|request/subject|request/title_override|nothing;" />
+
+        </div>
+
+        <div class="field"
+        tal:define="error errors/body_text|nothing;"
+        tal:attributes="class python:test(error, 'field error', 'field')">
+
+          <label for="body_text" i18n:translate="label_comment">Comment</label>
+
+        <span class="fieldRequired" title="Required"
+              i18n:attributes="title title_required;"
+              i18n:translate="label_required">(Required)</span>
+
+            <div class="formHelp" i18n:translate="description_add_comment">
+                Plain text formatting. URLs will be turned into links.
+            </div>
+
+            <div tal:content="error">Validation error output</div>
+
+                <textarea name="body_text"
+                          id="body_text"
+                          cols="40"
+                          rows="8"
+                          tal:content="request/body_text|request/text_override | nothing"
+                        ></textarea>
+
+            </div>
+
+            <div class="formControls">
+
+                <input class="context"
+                       type="submit"
+                       value="Save"
+                       name="form.button.Save"
+                       i18n:attributes="value label_save;"
+                       tal:attributes="name string:discussion_reply:method;" />
+
+            </div>
+          <input type="hidden" name="form.submitted" value="1" />
 
         </form>
     </div>
