@@ -7,6 +7,11 @@ Changelog
 
 4.0b5 - Unreleased
 ------------------
+- Improved comment display and behavior: Now opens "Add comment" in an 
+  overlay, no longer insists on a Subject for every comment, and more readable
+  layout. Also improved the error messages.
+  [limi]
+
 - Switching the default modal window effect to be a white-out instead of a 
   darkened effect. With large windows, the darkening is very distracting, and
   it also reminds people of the UAC prompts from Windows Vista/7, which is not
